correction de l'alignement au niveau du post

--- a/Front-end/src/components/HomePage/homepage-stylesheet.css
+++ b/Front-end/src/components/HomePage/homepage-stylesheet.css
@@ -11,7 +11,7 @@ body {
   top: 40px; left: 0px;
   border: var(--card-border);
   border-radius: 2.8px;
-  width: 350px;
+  width: 500px;
   margin-left: auto;
   margin-right: auto;
   font-family: arial;
@@ -125,7 +125,6 @@ body {
 }
 
 .comment {
-  width: 15%;
   font-size: 82%;
 }
 
